# pymallows

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
src/: lib.rs
wheels/: pymallows-0.1.0-cp310-cp310-macosx_10_12_x86_64.whl  pymallows-0.1.0-cp310-cp310-macosx_11_0_arm64.whl  pymallows-0.1.0-cp311-cp311-macosx_10_12_x86_64.whl  pymallows-0.1.0-cp311-cp311-macosx_11_0_arm64.whl  pymallows-0.1.0-cp312-cp312-macosx_10_12_x86_64.whl  pymallows-0.1.0-cp312-cp312-macosx_11_0_arm64.whl  pymallows-0.1.0-cp313-cp313-macosx_10_12_x86_64.whl  pymallows-0.1.0-cp313-cp313-macosx_11_0_arm64.whl
